# application_logic_rs

./: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml
src/: lib.rs
tests/sample_project_zephyr/: CMakeLists.txt  Makefile  renode_setup_nrf52840.resc
tests/sample_project_zephyr/src/: main.c
